kcms/rules: Fix showing selected VD on X11

Th Rules KCM treats Virtual Desktops differently:
- on wayland is a QStringList and a multiple choice `OptionList`
- on X11 is a QString and a single choice `Option`

The underlaying setting, however, is common and always a QStringList.
This made the check against the possible VDs fail, so the KCM on X11
would resort to show the default value: "All Virtual Desktops".

It was purely a visual failure in how the property was shown, not on
how the rules were saved or applied.

Convert the value to a `QString` in case we have a single `Option` to
fix the issue.

BUG: 484165
FIXED-IN: 6.3.3